--- a/public/finaliser-reservation.html
+++ b/public/finaliser-reservation.html
@@ -19,7 +19,7 @@
     <script src="https://js.stripe.com/v3/"></script>
     <style>
       .form-section {
-        background: rgba(255, 255, 255, 0.85);
+        background: rgba(255, 255, 255, 0.1);
         border-radius: 20px;
         padding: 40px;
         margin-bottom: 30px;
@@ -51,13 +51,7 @@
         margin-bottom: 25px;
       }
       .form-group label {
-        display: block;
-        margin-bottom: 10px;
-        font-weight: 600;
-        color: #374151;
-        font-size: 0.95rem;
-        text-transform: uppercase;
-        letter-spacing: 0.5px;
+        display: none;
       }
       .form-group input,
       .form-group textarea {
@@ -69,6 +63,14 @@
         transition: all 0.3s ease;
         background: rgba(255, 255, 255, 0.8);
         backdrop-filter: blur(10px);
+        color: #374151;
+      }
+      .form-group input::placeholder,
+      .form-group textarea::placeholder {
+        color: #6b7280;
+        font-weight: 500;
+        text-transform: uppercase;
+        letter-spacing: 0.5px;
       }
       .form-group input:focus,
       .form-group textarea:focus {
@@ -89,7 +91,7 @@
         }
       }
       .reservation-details {
-        background: rgba(248, 250, 252, 0.8);
+        background: rgba(248, 250, 252, 0.1);
         padding: 30px;
         border-radius: 16px;
         margin-bottom: 20px;
@@ -109,7 +111,7 @@
         margin-bottom: 15px;
         padding: 12px 0;
         border-bottom: 1px solid rgba(229, 231, 235, 0.4);
-        font-size: 1rem;
+        font-size: 0.85rem;
       }
       .detail-item:last-child {
         border-bottom: none;
@@ -121,8 +123,8 @@
         border-top: 2px solid rgba(93, 63, 211, 0.2);
       }
       .payment-section {
-        background: rgba(240, 253, 244, 0.9);
-        border: 2px solid #10b981;
+        background: rgba(255, 255, 255, 0.1);
+        border: 2px solid rgba(255, 255, 255, 0.3);
         position: relative;
       }
       .payment-section::before {
@@ -134,8 +136,8 @@
         bottom: 0;
         background: linear-gradient(
           135deg,
-          rgba(16, 185, 129, 0.05),
-          rgba(16, 185, 129, 0.02)
+          rgba(255, 255, 255, 0.1),
+          rgba(255, 255, 255, 0.05)
         );
         pointer-events: none;
       }
@@ -283,12 +285,12 @@
           <div class="content color0 span-3-75">
             <h2 class="major">
               Finaliser ma<br />
-              <span class="themysion">réservation</span>
+              <span class="themysion">Reservation</span>
             </h2>
             <p>
-              Votre demande de réservation a été acceptée ! Complétez les
-              informations ci-dessous et effectuez le paiement de l'acompte de
-              10% pour confirmer votre réservation à Calypso Bay.
+              Votre demande de réservation a été acceptée ! Complétez le
+              formulaire ci-dessous et effectuez le paiement de l'acompte de 10%
+              pour confirmer votre réservation à Calypso Bay.
             </p>
             <ul class="actions">
               <li>
@@ -323,36 +325,72 @@
                 <div class="form-row">
                   <div class="form-group">
                     <label for="name">Nom complet</label>
-                    <input type="text" id="name" name="name" required />
+                    <input
+                      type="text"
+                      id="name"
+                      name="name"
+                      placeholder="NOM COMPLET"
+                      required
+                    />
                     <div class="validation-message" id="name-error"></div>
                   </div>
                   <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required />
+                    <input
+                      type="email"
+                      id="email"
+                      name="email"
+                      placeholder="EMAIL"
+                      required
+                    />
                     <div class="validation-message" id="email-error"></div>
                   </div>
                 </div>
                 <div class="form-row">
                   <div class="form-group">
                     <label for="tel">Téléphone</label>
-                    <input type="tel" id="tel" name="tel" required />
+                    <input
+                      type="tel"
+                      id="tel"
+                      name="tel"
+                      placeholder="TÉLÉPHONE"
+                      required
+                    />
                     <div class="validation-message" id="tel-error"></div>
                   </div>
                   <div class="form-group">
                     <label for="address">Adresse</label>
-                    <input type="text" id="address" name="address" required />
+                    <input
+                      type="text"
+                      id="address"
+                      name="address"
+                      placeholder="ADRESSE"
+                      required
+                    />
                     <div class="validation-message" id="address-error"></div>
                   </div>
                 </div>
                 <div class="form-row">
                   <div class="form-group">
                     <label for="city">Ville</label>
-                    <input type="text" id="city" name="city" required />
+                    <input
+                      type="text"
+                      id="city"
+                      name="city"
+                      placeholder="VILLE"
+                      required
+                    />
                     <div class="validation-message" id="city-error"></div>
                   </div>
                   <div class="form-group">
                     <label for="postal">Code postal</label>
-                    <input type="text" id="postal" name="postal" required />
+                    <input
+                      type="text"
+                      id="postal"
+                      name="postal"
+                      placeholder="CODE POSTAL"
+                      required
+                    />
                     <div class="validation-message" id="postal-error"></div>
                   </div>
                 </div>
@@ -363,6 +401,7 @@
                     id="country"
                     name="country"
                     value="France"
+                    placeholder="PAYS"
                     required
                   />
                   <div class="validation-message" id="country-error"></div>
