--- a/public/finaliser-reservation.html
+++ b/public/finaliser-reservation.html
@@ -21,8 +21,7 @@
       .form-section {
         background: rgba(255, 255, 255, 0.1);
         border-radius: 20px;
-        padding: 40px;
-        margin-bottom: 30px;
+        padding: 20px;
         box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
         backdrop-filter: blur(20px);
         border: 1px solid rgba(255, 255, 255, 0.3);
@@ -316,9 +315,8 @@
           <div class="content span-9-5">
             <h3 class="major">📋 Informations personnelles</h3>
             <p>
-              Veuillez compléter vos informations personnelles pour finaliser
-              votre réservation. Ces données nous permettront de vous contacter
-              et de préparer votre accueil.
+              Ces données nous permettront de vous contacter et de préparer
+              votre accueil.
             </p>
 
             <div id="error-container"></div>
@@ -404,7 +402,6 @@
                     type="text"
                     id="country"
                     name="country"
-                    value="France"
                     placeholder="Pays"
                     required
                   />
