--- a/public/finaliser-reservation.html
+++ b/public/finaliser-reservation.html
@@ -616,94 +616,97 @@
 				`
       }
 
-             function calculatePaymentAmount(data) {
-         console.log('Calculating payment for:', data.reservationDetails)
+      function calculatePaymentAmount(data) {
+        console.log('Calculating payment for:', data.reservationDetails)
 
-         // Essayer plusieurs patterns pour extraire le montant total
-         let totalAmount = null
+        // Essayer plusieurs patterns pour extraire le montant total
+        let totalAmount = null
 
-         // Pattern 1: "Total: X.XX €" (le vrai total final avec décimales)
-         let totalMatch = data.reservationDetails.match(
-           /Total:\s*([\d\s,]+\.?\d*)\s*€/i
-         )
-         if (totalMatch) {
-           totalAmount = parseFloat(totalMatch[1].replace(/[\s,]/g, ''))
-           console.log('Found total with pattern 1:', totalAmount)
-         }
+        // Pattern 1: "Total: X.XX €" (le vrai total final avec décimales)
+        let totalMatch = data.reservationDetails.match(
+          /Total:\s*([\d\s,]+\.?\d*)\s*€/i
+        )
+        if (totalMatch) {
+          totalAmount = parseFloat(totalMatch[1].replace(/[\s,]/g, ''))
+          console.log('Found total with pattern 1:', totalAmount)
+        }
 
-         // Pattern 2: "Total: X €" (le vrai total final sans décimales)
-         if (!totalAmount) {
-           totalMatch = data.reservationDetails.match(
-             /Total:\s*([\d\s,]+)\s*€/i
-           )
-           if (totalMatch) {
-             totalAmount = parseFloat(totalMatch[1].replace(/[\s,]/g, ''))
-             console.log('Found total with pattern 2:', totalAmount)
-           }
-         }
+        // Pattern 2: "Total: X €" (le vrai total final sans décimales)
+        if (!totalAmount) {
+          totalMatch = data.reservationDetails.match(/Total:\s*([\d\s,]+)\s*€/i)
+          if (totalMatch) {
+            totalAmount = parseFloat(totalMatch[1].replace(/[\s,]/g, ''))
+            console.log('Found total with pattern 2:', totalAmount)
+          }
+        }
 
-         // Pattern 3: Chercher tous les montants et prendre le plus grand
-         if (!totalAmount) {
-           const allAmounts = data.reservationDetails.match(/(\d+(?:[,\s]\d+)*\.?\d*)\s*€/g)
-           if (allAmounts && allAmounts.length > 0) {
-             const amounts = allAmounts.map((match) =>
-               parseFloat(match.replace(/[\s€]/g, '').replace(',', ''))
-             )
-             totalAmount = Math.max(...amounts)
-             console.log('Found total with pattern 3 (max amount):', totalAmount)
-           }
-         }
+        // Pattern 3: Chercher tous les montants et prendre le plus grand
+        if (!totalAmount) {
+          const allAmounts = data.reservationDetails.match(
+            /(\d+(?:[,\s]\d+)*\.?\d*)\s*€/g
+          )
+          if (allAmounts && allAmounts.length > 0) {
+            const amounts = allAmounts.map((match) =>
+              parseFloat(match.replace(/[\s€]/g, '').replace(',', ''))
+            )
+            totalAmount = Math.max(...amounts)
+            console.log('Found total with pattern 3 (max amount):', totalAmount)
+          }
+        }
 
-         // Pattern 4: "Total des nuits (X) : Y €" (fallback)
-         if (!totalAmount) {
-           totalMatch = data.reservationDetails.match(
-             /Total des nuits\s*\(\d+\)\s*:\s*([\d\s,]+)\s*€/i
-           )
-           if (totalMatch) {
-             totalAmount = parseFloat(totalMatch[1].replace(/[\s,]/g, ''))
-             console.log('Found total with pattern 4:', totalAmount)
-           }
-         }
+        // Pattern 4: "Total des nuits (X) : Y €" (fallback)
+        if (!totalAmount) {
+          totalMatch = data.reservationDetails.match(
+            /Total des nuits\s*\(\d+\)\s*:\s*([\d\s,]+)\s*€/i
+          )
+          if (totalMatch) {
+            totalAmount = parseFloat(totalMatch[1].replace(/[\s,]/g, ''))
+            console.log('Found total with pattern 4:', totalAmount)
+          }
+        }
 
-         console.log('Final total amount found:', totalAmount)
+        console.log('Final total amount found:', totalAmount)
 
-         if (totalAmount && totalAmount > 0) {
-           const depositAmount = totalAmount * 0.1
-           const remainingAmount = totalAmount - depositAmount
+        if (totalAmount && totalAmount > 0) {
+          const depositAmount = totalAmount * 0.1
+          const remainingAmount = totalAmount - depositAmount
 
-           console.log('Calculated deposit:', depositAmount)
-           console.log('Remaining amount:', remainingAmount)
+          console.log('Calculated deposit:', depositAmount)
+          console.log('Remaining amount:', remainingAmount)
 
-           const paymentAmountElement = document.getElementById('payment-amount')
+                     const paymentAmountElement = document.getElementById('payment-amount')
            paymentAmountElement.innerHTML = `
-              <div style="font-size: 2.5rem; font-weight: bold; color: #10b981; margin-bottom: 10px;">
-                ${totalAmount.toFixed(2)} €
-              </div>
-              <div style="font-size: 1.2rem; color: #6b7280; margin-bottom: 5px;">
-                -${depositAmount.toFixed(2)} € (acompte)
-              </div>
-              <div style="font-size: 1.1rem; color: #374151; font-weight: 600;">
-                Solde restant (après acompte)
-              </div>
-            `
-           paymentAmountElement.classList.add('highlight')
+               <div style="font-size: 2.5rem; font-weight: bold; color: #10b981; margin-bottom: 10px;">
+                 ${totalAmount.toFixed(2)} €
+               </div>
+               <div style="font-size: 1.2rem; color: #6b7280; margin-bottom: 5px;">
+                 -${depositAmount.toFixed(2)} € (acompte)
+               </div>
+               <div style="font-size: 1.1rem; color: #374151; font-weight: 600; margin-bottom: 5px;">
+                 Solde restant (après acompte)
+               </div>
+               <div style="font-size: 1.8rem; color: #10b981; font-weight: bold;">
+                 ${remainingAmount.toFixed(2)} €
+               </div>
+             `
+          paymentAmountElement.classList.add('highlight')
 
-           // Mettre à jour le texte du bouton avec le montant
-           const buttonText = document.getElementById('button-text')
-           if (buttonText) {
-             buttonText.textContent = `Payer ${depositAmount.toFixed(
-               2
-             )} € (acompte) et confirmer ma réservation`
-           }
+          // Mettre à jour le texte du bouton avec le montant
+          const buttonText = document.getElementById('button-text')
+          if (buttonText) {
+            buttonText.textContent = `Payer ${depositAmount.toFixed(
+              2
+            )} € (acompte) et confirmer ma réservation`
+          }
 
-           // Stocker le montant total pour le paiement
-           window.totalAmount = totalAmount
-         } else {
-           document.getElementById('payment-amount').textContent =
-             'Montant à calculer'
-           console.log('No valid amount found in:', data.reservationDetails)
-         }
-       }
+          // Stocker le montant total pour le paiement
+          window.totalAmount = totalAmount
+        } else {
+          document.getElementById('payment-amount').textContent =
+            'Montant à calculer'
+          console.log('No valid amount found in:', data.reservationDetails)
+        }
+      }
 
       // Gestion de la soumission du formulaire
       document
