--- a/public/finaliser-reservation.html
+++ b/public/finaliser-reservation.html
@@ -412,7 +412,7 @@
         </section>
 
         <!-- D É T A I L S //////////////////////////////////////////////////////////////////////////////// -->
-        <section class="panel large color1">
+        <section class="panel medium color1">
           <div class="intro joined span-3-5">
             <h2 class="major">📅 Détails de la réservation</h2>
             <p>
@@ -674,8 +674,8 @@
           console.log('Calculated deposit:', depositAmount)
           console.log('Remaining amount:', remainingAmount)
 
-                     const paymentAmountElement = document.getElementById('payment-amount')
-           paymentAmountElement.innerHTML = `
+          const paymentAmountElement = document.getElementById('payment-amount')
+          paymentAmountElement.innerHTML = `
                <div style="font-size: 2.5rem; font-weight: bold; color: #10b981; margin-bottom: 10px;">
                  ${totalAmount.toFixed(2)} €
                </div>
